moving and dots dissapear

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Project 0</title>
+    <!-- <script src="public/js/jquery-3.2.1.min.js"></script> -->
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
-  <h1>Project 1</h1>
+  <div id="gameBoard">
+      <div class="box"></div>
+      <div class="ball one"></div>
+      <div class="ball two"></div>
+  </div>
 </body>
 </html>
