game works with manual dots. not with auto added dots

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 <body>
   <div id="gameBoard">
       <div class="box"></div>
+      <div class="boxP2"></div>
+      <div class="ball"></div>
       <div class="ball one"></div>
       <div class="ball two"></div>
+      <div class="ball three"></div>
+      <div class="ball four"></div>
+      <div class="ball five" ></div>
   </div>
 </body>
 </html>
