--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="gameBoard">
-      <div class="box"></div>
+      <div class="boxP1"></div>
       <div class="boxP2"></div>
       <div class="ball"></div>
       <div class="ball one"></div>
