both squares eat stuff and numbers count up when eaten

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Project 0</title>
-    <!-- <script src="public/js/jquery-3.2.1.min.js"></script> -->
-    <script
+  <!-- <script src="public/js/jquery-3.2.1.min.js"></script> -->
+  <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
@@ -12,15 +12,18 @@
   <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
+  <div class="title">COLLECT STUFF</div>
+  <div class="Scoreboard 1">
+  <div id="p1Counter">0</div>
+  </div>
+
   <div id="gameBoard">
-      <div class="boxP1"></div>
-      <div class="boxP2"></div>
-      <div class="ball"></div>
-      <div class="ball one"></div>
-      <div class="ball two"></div>
-      <div class="ball three"></div>
-      <div class="ball four"></div>
-      <div class="ball five" ></div>
+    <div class="boxP1"></div>
+    <div class="boxP2"></div>
+  </div>
+
+  <div class="Scoreboard 2">
+    <div id="p2Counter">0</div>
   </div>
 </body>
 </html>
