working with blue green and red dots, two player with start and end screen

--- a/index.html
+++ b/index.html
@@ -11,19 +11,5 @@
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
 </head>
-<body>
-  <div class="title">COLLECT STUFF</div>
-  <div class="Scoreboard 1">
-  <div id="p1Counter">0</div>
-  </div>
-
-  <div id="gameBoard">
-    <div class="boxP1"></div>
-    <div class="boxP2"></div>
-  </div>
-
-  <div class="Scoreboard 2">
-    <div id="p2Counter">0</div>
-  </div>
-</body>
+<a class="nav-link" href="game.html">START</a>
 </html>
