added sound effects and mute button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   crossorigin="anonymous"></script>
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
+  <link rel="stylesheet" href="animate.css">
 </head>
+<body>
+  <div class="header">
+    <h1> WELCOME TO COLLECT STUFF</h1>
+    <h2> A game where you have to collect stuff</h2>
+  </div>
 <a class="nav-link" href="game.html">START</a>
+</body>
 </html>
