--- a/game.html
+++ b/game.html
@@ -10,28 +10,43 @@
   crossorigin="anonymous"></script>
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
+  <link rel="stylesheet" href="animate.css">
 </head>
 <body>
+
   <body>
+
     <div class="gameScreen">
-      <div class="title">COLLECT STUFF</div>
-
-      <div class="Scoreboard">
-        <div class="p1score">
-          <div id="p1Counter">0</div>
-        </div>
-        <div class="p2score">
-          <div id="p2Counter">0</div>
-        </div>
-      </div>
-
       <div id="gameBoard">
         <div class="boxP1"></div>
         <div class="boxP2"></div>
       </div>
 
-      <div id="countDownTimer"></div>
+      <div class="Scoreboard">
+        <div class="p1score">
+          <div id="p1Counter">0</div>
+        </div>
+        <div id="countDownTimer"></div>
+        <div class="p2score">
+          <div id="p2Counter">0</div>
+        </div>
+
+
+        <button id="mute-button">PAUSE</button>
+
+        <audio src="sounds/pop.wav"> </audio>
+        <audio src="sounds/ding.wav"> </audio>
+        <audio src="sounds/error.wav"> </audio>
+        <audio src="sounds/gold.wav"> </audio>
+        <audio src="sounds/goldenters.wav"> </audio>
+
+
+
+      </div>
+
     </div>
+
+
     <div class="noshow" id="gameOverDiv">
       <div class="gameoverTitle">GAME OVER!</div>
       <div class="showWinner"></div>
