mute button work and minimal style

--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
   <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -32,7 +33,8 @@
         </div>
 
 
-        <button id="mute-button">PAUSE</button>
+        <button id="mute-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
+
 
         <audio src="sounds/pop.wav"> </audio>
         <audio src="sounds/ding.wav"> </audio>
