--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <h1> WELCOME TO COLLECT STUFF</h1>
     <h2> A game where you have to collect stuff</h2>
   </div>
-<a class="nav-link" href="game.html">START</a>
+<a class="mute" href="game.html">START</a>
 </body>
 </html>
