--- a/index.html
+++ b/index.html
@@ -11,12 +11,67 @@
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
   <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <body>
+    <div class="gameScreen" id="hidden">
+      <div id="gameBoard">
+        <div class="boxP1"></div>
+        <div class="boxP2"></div>
+      </div>
+
+      <div class="Scoreboard">
+        <div class="p1score">
+          <div id="p1Counter">0</div>
+        </div>
+        <div id="countDownTimer"></div>
+        <div class="p2score">
+          <div id="p2Counter">0</div>
+        </div>
+
+
+        <button id="mute-button">
+          <i class="fa fa-volume-up" aria-hidden="true"></i></button>
+
+          <audio src="sounds/pop.wav"> </audio>
+          <audio src="sounds/ding.wav"> </audio>
+          <audio src="sounds/error.wav"> </audio>
+          <audio src="sounds/gold.wav"> </audio>
+          <audio src="sounds/goldenters.wav"> </audio>
+        </div>
+      </div>
+
+
+  <!-- Start Screen Stuff -->
+<div id="welcomePage">
   <div class="header">
     <h1> WELCOME TO COLLECT STUFF</h1>
     <h2> A game where you have to collect stuff</h2>
   </div>
-<a class="mute" href="game.html">START</a>
-</body>
-</html>
+
+  <input type="range" value="60000" min="30000" max="200000">
+
+  <button id="start">START</button>
+</div>
+
+
+
+
+
+
+
+
+  <!-- End Screen Stuff -->
+
+  <div class="noshow" id="gameOverDiv">
+    <div class="gameoverTitle">GAME OVER!</div>
+    <div class="showWinner"></div>
+    <a class="nav-link" href="index.html">START AGAIN</a>
+  </div>
+
+
+
+    </body>
+  </body>
+  </html>
