--- a/index.html
+++ b/index.html
@@ -27,22 +27,17 @@
       </div>
 
       <div class="Scoreboard">
-
-
-
         <div class="p1score">
           <div id="p1Counter">0</div>
         </div>
         <div id="countDownTimer"></div>
         <div class="p2score">
           <div id="p2Counter">0</div>
-
         </div>
 
 
         <button id="mute-button">
           <i class="fa fa-volume-up" aria-hidden="true"></i></button>
-
           <audio src="sounds/pop.wav"> </audio>
           <audio src="sounds/ding.wav"> </audio>
           <audio src="sounds/error.wav"> </audio>
@@ -50,15 +45,57 @@
           <audio src="sounds/goldenters.wav"> </audio>
         </div>
       </div>
+
       <div class="instructions">
-        <div class="icon">
+        <div class="icon1">
         <i class="fa fa-question-circle-o" aria-hidden="true"></i>
+        </div>
+        <div class="icon2">
+          <i class="fa fa-gamepad" aria-hidden="true"></i>
+
         </div>
       </div>
 
-      <!-- Start Screen Stuff -->
-      <div id="welcomePage">
 
+<!-- intruction popup -->
+
+<div class="zindex1" id="popupBackground">
+  <div class="infoBox">
+<h1> INSTRUCTIONS </h1>
+<div class="player1Controls">
+ <span id="instructionsp1color"><i class="fa fa-square" aria-hidden="true"></i> <h1>Player 1 __________________</h1></span>
+ <div class="arrowKeys"></div>
+</div>
+
+<div class="player2Controsls">
+ <span id="instructionsp2color"><i class="fa fa-square" aria-hidden="true"></i> <h1>Player 2 __________________</h1></span>
+ <div class="wsad"></div>
+</div>
+
+
+<div class="dotInstructions">
+<div class="title">
+  <h1>THINGS YOU CAN COLLECT </h1
+</div>
+<blue><i class="fa fa-circle" aria-hidden="true"></i>
+  1 Point
+</blue>
+
+
+<green><i class="fa fa-circle" aria-hidden="true"></i>   2 Point</green>
+<gold><i class="fa fa-circle" aria-hidden="true"></i>   10 Point</gold>
+<red><i class="fa fa-circle" aria-hidden="true"></i>   -1 Point</red>
+
+</div>
+
+  </div>
+</div>
+
+
+
+
+      <!-- Start Screen Stuff -->
+    <div class= "zindex4" id="welcomePage">
         <div class="spinner">
           <span class="ball-1"></span>
           <span class="ball-2"></span>
@@ -67,7 +104,8 @@
           <span class="ball-5"></span>
         </div>
         <div class="header">
-          <h1> WELCOME TO <strong> COLLECT STUFF</strong>. WHERE THE AIM OF THE GAME IS TO COLLECT AS MUCH STUFF AS YOU CAN BEFORE THE TIME RUNS OUT. JUST MAKE SURE YOU DONT COLLECT THE WRONG STUFF.</h1>
+          <h1> WELCOME TO <strong> COLLECT SOME STUFF.</strong> WHERE THE AIM OF THE GAME IS TO <strong> COLLECT AS MUCH STUFF</strong> AS YOU CAN BEFORE THE TIME RUNS OUT. BUT <strong> DONT COLLECT THE WRONG STUFF</strong>, OR YOUR WILL LOOSE POINTS AND LOOSE THE GAME AND YOUR FRIEND WILL WIN THE GAME.
+</h1>
 
         </div>
         <h1><strong>How long do you want to play for?</strong></h1>
