--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 <body>
 
   <main>
+
+    <div class="instructions">
+      <div class="icon1">
+      <i class="fa fa-question-circle-o" aria-hidden="true"></i>
+      </div>
+
+        <button id="mute-button">
+          <i class="fa fa-volume-up" aria-hidden="true"></i></button>
+
+      </div>
+
     <div class="gameScreen" id="hidden">
       <div id="gameBoard">
         <div class="boxP1"></div>
@@ -36,8 +47,7 @@
         </div>
 
 
-        <button id="mute-button">
-          <i class="fa fa-volume-up" aria-hidden="true"></i></button>
+
           <audio src="sounds/pop.wav"> </audio>
           <audio src="sounds/ding.wav"> </audio>
           <audio src="sounds/error.wav"> </audio>
@@ -46,15 +56,7 @@
         </div>
       </div>
 
-      <div class="instructions">
-        <div class="icon1">
-        <i class="fa fa-question-circle-o" aria-hidden="true"></i>
-        </div>
-        <div class="icon2">
-          <i class="fa fa-gamepad" aria-hidden="true"></i>
 
-        </div>
-      </div>
 
 
 <!-- intruction popup -->
@@ -75,7 +77,7 @@
 
 <div class="dotInstructions">
 <div class="title">
-  <h1>THINGS YOU CAN COLLECT </h1
+  <h1>THINGS YOU CAN COLLECT </h1>
 </div>
 <blue><i class="fa fa-circle" aria-hidden="true"></i>
   1 Point
@@ -122,18 +124,14 @@
       </div>
 
 
-
-
-
-
-
-
       <!-- End Screen Stuff -->
 
       <div class="noshow" id="gameOverDiv">
         <div class="gameoverTitle">GAME OVER!</div>
         <div class="showWinner"></div>
-        <a class="nav-link" href="index.html">RETURN TO HOME SCREEN</a>
+        <a class="hvr-underline-from-center" id="finish" href="index.html">RETURN TO HOME SCREEN</a>
+
+        <!-- <button class="hvr-underline-from-center" id="finish" href="index.html">RETURN TO HOME SCREEN</button> -->
       </div>
 
 
