--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
         <div class="gameoverTitle">GAME OVER!</div>
         <div class="showWinner"></div>
         <a class="hvr-underline-from-center" id="finish" href="index.html">RETURN TO HOME SCREEN</a>
+        <div class="spinner2">
+          <span class="ball-1"></span>
+          <span class="ball-2"></span>
+          <span class="ball-3"></span>
+          <span class="ball-4"></span>
+          <span class="ball-5"></span>
+        </div>
 
         <!-- <button class="hvr-underline-from-center" id="finish" href="index.html">RETURN TO HOME SCREEN</button> -->
       </div>
