--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="p1score">
           <div id="p1Counter">0</div>
         </div>
-        <div id="countDownTimer"></div>
+        <div id="countDownTimer">READY...</div>
         <div class="p2score">
           <div id="p2Counter">0</div>
         </div>
