spelling and end sound added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <audio src="sounds/error.wav"> </audio>
           <audio src="sounds/gold.wav"> </audio>
           <audio src="sounds/goldenters.wav"> </audio>
+          <audio src="sounds/end.wav"> </audio>
         </div>
       </div>
 
@@ -106,7 +107,7 @@
           <span class="ball-5"></span>
         </div>
         <div class="header">
-          <h1> WELCOME TO <strong> COLLECT SOME STUFF.</strong> WHERE THE AIM OF THE GAME IS TO <strong> COLLECT AS MUCH STUFF</strong> AS YOU CAN BEFORE THE TIME RUNS OUT. BUT <strong> DONT COLLECT THE WRONG STUFF</strong>, OR YOUR WILL LOOSE POINTS AND LOOSE THE GAME AND YOUR FRIEND WILL WIN THE GAME.
+          <h1> WELCOME TO <strong> COLLECT SOME STUFF.</strong> WHERE THE AIM OF THE GAME IS TO <strong> COLLECT AS MUCH STUFF</strong> AS YOU CAN BEFORE THE TIME RUNS OUT. BUT <strong> DONT COLLECT THE WRONG STUFF</strong>, OR YOU WILL LOSE POINTS AND LOOSE THE GAME AND YOUR FRIEND WILL WIN THE GAME.
 </h1>
 
         </div>
