--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 <!-- WELCOME COPY -->
         <div class="header">
-          <h1> WELCOME TO <strong> COLLECT SOME STUFF.</strong> WHERE THE AIM OF THE GAME IS TO <strong> COLLECT AS MUCH STUFF</strong> AS YOU CAN BEFORE THE TIME RUNS OUT. BUT <strong> DONT COLLECT THE WRONG STUFF</strong>, OR YOU WILL LOSE POINTS AND LOOSE THE GAME AND YOUR FRIEND WILL WIN THE GAME.
+          <h1> WELCOME TO <strong> COLLECT SOME STUFF.</strong> WHERE THE AIM OF THE GAME IS TO <strong> COLLECT AS MUCH STUFF</strong> AS YOU CAN BEFORE THE TIME RUNS OUT. BUT <strong> DONT COLLECT THE WRONG STUFF</strong>, OR YOU WILL LOSE POINTS AND LOSE THE GAME AND YOUR FRIEND WILL WIN THE GAME.
           </h1>
         </div>
 <!-- TIME SLIDER -->
