--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
       </div>
 
 
-
     </main>
+    <footer> MADE BY <a href="http://www.simonamor.design" target="_blank"> SIMONAMOR.DESIGN </a> </footer>
+
   </body>
   </html>
