footer now works

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 
 
     </main>
-    <footer> MADE BY <a href="http://www.simonamor.design" target="_blank"> SIMONAMOR.DESIGN </a> </footer>
+    <footer> MADE BY    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+ <a href="http://www.simonamor.design" target="_blank">    SIMONAMOR.DESIGN </a> </footer>
 
   </body>
   </html>
